--- a/src/containers/App/App.scss
+++ b/src/containers/App/App.scss
@@ -1,3 +1,38 @@
+@import '../../_settings.scss';
+
 .App {
 
+}
+
+.locale-container {
+  text-align: center;
+  margin-top: 10px;
+}
+
+.select__locale {
+  margin-right: 10px;
+}
+
+select {
+  background-color: $primary-grey;
+  background-repeat: no-repeat;
+  background-position: right 10px top 15px;
+  background-size: 16px 16px;
+  color: $primary-font;
+  padding: 12px;
+  width: auto;
+  font-family: arial,tahoma;
+  font-size: 16px;
+  font-weight: bold;
+  text-align: center;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  border-radius: 3px;
+  border: 1px solid $black;
+  outline: 0;
+  appearance: none;
+  
+  &:hover {
+    background-color: $base-grey;
+    color: $secondary-font;
+  }
 }
